--- a/homepage.html
+++ b/homepage.html
@@ -134,19 +134,19 @@
     <div style="display: flex; flex-direction: row; align-items: center; justify-content: center;" class="btn-group">
       <center>
         <p>Hit Control F to Search for a Game!<p>
-      <button onclick="location.href = 'homework/slope.html';">Slope</button>
-      <button onclick="location.href = 'homework/getawayout.html';">Getaway Shootout</button>
-      <button onclick="location.href = 'homework/Basketrandom.html';">Basket Random</button>
-      <button onclick="location.href = 'homework/ytub.html';">Youtube Bypass📺👀</button>
-      <button onclick="location.href = 'homework/CookieClicker.html';">Cookie Clicker</button>
-      <button onclick="location.href = 'homework/1v1lol.html';">1v1.Lol</button>
-      <button onclick="location.href = 'homework/retrobowl.html';">Retro Bowl</button>
-      <button onclick="location.href = 'homework/MotoXM30.html';">Moto XM 30</button>
-      <button onclick="location.href = 'homework/minecraft.html';">Minecraft</button>
-      <button onclick="location.href = 'homework/tunnelrush.html';">Tunnel Rush</button>
+      <button onclick="location.href = 'slope.html';">Slope</button>
+      <button onclick="location.href = 'getawayout.html';">Getaway Shootout</button>
+      <button onclick="location.href = 'Basketrandom.html';">Basket Random</button>
+      <button onclick="location.href = 'ytub.html';">Youtube Bypass📺👀</button>
+      <button onclick="location.href = 'CookieClicker.html';">Cookie Clicker</button>
+      <button onclick="location.href = '1v1lol.html';">1v1.Lol</button>
+      <button onclick="location.href = 'retrobowl.html';">Retro Bowl</button>
+      <button onclick="location.href = 'MotoXM30.html';">Moto XM 30</button>
+      <button onclick="location.href = 'minecraft.html';">Minecraft</button>
+      <button onclick="location.href = 'tunnelrush.html';">Tunnel Rush</button>
       <button onclick="location.href = 'https://script.google.com/macros/s/AKfycbwAoMJxFkkCGbz6H0x2lq5uVhb1vvQRKraex1znydX5Gm0jWse3HWUTvdU34ghoPqQauQ/exec';">Amazing Rope Police</button>
-      <button onclick="location.href = 'homework/tombofthemask.html';">Tomb of the Mask</button>
-      <button onclick="location.href = 'homework/doom.html';">Doom</button>
+      <button onclick="location.href = 'tombofthemask.html';">Tomb of the Mask</button>
+      <button onclick="location.href = 'doom.html';">Doom</button>
     </div>
     <br></br>
     <center>
